rs/type-registry/tests/ui/invalid_annotation.stderr
error: expected string literal
 --> tests/ui/invalid_annotation.rs:4:13
  |
4 | #[type_info(id = 42)] // Integer values are not supported
  |             ^^^^^^^
